<resources>
    <string name="app_name">Prueba</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="registrarme">Registrarme</string>
    <string name="registro">Registro</string>
    <string name="ir_a_login">Ir a Login</string>
    <string name="no_tienes_una_cuenta_crea_una_aqu">No tienes una cuenta? Crea una aquí.</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
</resources>